Disallow concatenating a multi-line string in a tagged value
A tagged value is now either a single multi-line string ('''...''') or
one-or-more '+'-concatenated single-line strings - a multi-line string
cannot be concatenated with anything. Simplifies the taggedValue grammar
rule to (MULTILINE_STRING | STRING (PLUS STRING)*) and restores the
original single-line concatenation path unchanged.

Tests: single-line concatenation still works; multi-line concatenation is
rejected as a parse error.