@@ -18,7 +18,6 @@ import org.antlr.v4.runtime.ParserRuleContext;
 import org.antlr.v4.runtime.RuleContext;
 import org.antlr.v4.runtime.Token;
 import org.antlr.v4.runtime.misc.Interval;
-import org.antlr.v4.runtime.tree.ParseTree;
 import org.antlr.v4.runtime.tree.TerminalNode;
 import org.eclipse.collections.api.RichIterable;
 import org.eclipse.collections.api.block.function.Function;
@@ -136,7 +135,6 @@ import org.finos.legend.pure.m3.navigation.ValueSpecificationBootstrap;
 import org.finos.legend.pure.m3.navigation._package._Package;
 import org.finos.legend.pure.m3.navigation.relation._Column;
 import org.finos.legend.pure.m3.navigation.relation._RelationType;
-import org.finos.legend.pure.m3.serialization.grammar.m3parser.antlr.M3Parser;
 import org.finos.legend.pure.m3.serialization.grammar.m3parser.antlr.M3Parser.AllOrFunctionContext;
 import org.finos.legend.pure.m3.serialization.grammar.m3parser.antlr.M3Parser.ArithmeticPartContext;
 import org.finos.legend.pure.m3.serialization.grammar.m3parser.antlr.M3Parser.AssociationContext;
@@ -3254,28 +3252,13 @@ public class AntlrContextToM3CoreInstance
     private TaggedValue taggedValue(ImportGroup importId, TaggedValueContext ctx)
     {
         ImportStubInstance importStubInstance = ImportStubInstance.createPersistent(this.repository, this.sourceInformation.getPureSourceInformation(ctx.qualifiedName().getStart(), ctx.identifier().getStart(), ctx.identifier().getStop()), this.getQualifiedNameString(ctx.qualifiedName()) + "%" + ctx.identifier().getText(), importId);
-        // The value is the (PLUS) concatenation of the string tokens in source order; each token may be a
-        // single-line STRING or a multi-line MULTILINE_STRING, so iterate the children to keep them interleaved.
-        MutableList<TerminalNode> stringNodes = Lists.mutable.empty();
-        for (int i = 0; i < ctx.getChildCount(); i++)
+        // A tagged value is either a single multi-line string or one-or-more '+'-concatenated single-line strings.
+        if (ctx.MULTILINE_STRING() != null)
         {
-            ParseTree child = ctx.getChild(i);
-            if (child instanceof TerminalNode)
-            {
-                int type = ((TerminalNode) child).getSymbol().getType();
-                if ((type == M3Parser.STRING) || (type == M3Parser.MULTILINE_STRING))
-                {
-                    stringNodes.add((TerminalNode) child);
-                }
-            }
+            TerminalNode multiline = ctx.MULTILINE_STRING();
+            return TaggedValueInstance.createPersistent(this.repository, this.sourceInformation.getPureSourceInformation(ctx.getStart(), multiline.getSymbol(), multiline.getSymbol()), importStubInstance, processMultilineString(multiline.getText()));
         }
-        String value = stringNodes.collect(AntlrContextToM3CoreInstance::taggedValueString).makeString();
-        return TaggedValueInstance.createPersistent(this.repository, this.sourceInformation.getPureSourceInformation(ctx.getStart(), stringNodes.getFirst().getSymbol(), stringNodes.getLast().getSymbol()), importStubInstance, value);
-    }
-
-    private static String taggedValueString(TerminalNode node)
-    {
-        return (node.getSymbol().getType() == M3Parser.MULTILINE_STRING) ? processMultilineString(node.getText()) : removeQuotes(node);
+        return TaggedValueInstance.createPersistent(this.repository, this.sourceInformation.getPureSourceInformation(ctx.getStart(), ctx.STRING().get(0).getSymbol(), ctx.STRING().get(ctx.STRING().size() - 1).getSymbol()), importStubInstance, Lists.mutable.withAll(ctx.STRING()).collect(AntlrContextToM3CoreInstance::removeQuotes).makeString());
     }
 
     private DefaultValue defaultValue(DefaultValueContext ctx, ImportStub isOwner, ImportGroup importId, String propertyName)
